--- a/back/vercel.json
+++ b/back/vercel.json
@@ -10,5 +10,11 @@
          "src": "/(.*)",
          "dest": "server.js"
       }
+   ],
+   "rewrites": [
+      { 
+         "source": "/(.*)",
+         "destination": "/"
+      }
    ]
 }
